--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=paypaldemo
-momo.partnerCode=MOMOIQA420180417
+momo.partnerCode=MOMOLRJZ20181206
 momo.accessKey=mTCKt9W3eU1m39TW
 momo.secretKey=SetA5RDnLHvt51AULf51DyauxUo3kDU6
-momo.endpoint=
+momo.endpoint=https://test-payment.momo.vn/v2/gateway/api
+
 
 
